<resources>
    <string name="app_name">ShoeStore</string>
    <string name="signup">Create Account</string>
    <string name="login">Login</string>
    <string name="login_screen_text">Welcome back to ShoeStore</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome!"</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="instructions_one">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur lobortis dolor enim, eu dapibus lacus accumsan in. Ut faucibus pharetra pulvinar. Nullam gravida risus vitae purus finibus varius. Donec vel enim nibh. Vestibulum dapibus turpis ac porttitor feugiat. Ut eget magna nisl. Donec sed metus et magna posuere porttitor. Nunc eu sapien nec turpis accumsan fringilla. Morbi facilisis sit amet sem vitae commodo. Sed dapibus purus vitae sapien pretium, quis vehicula tellus consequat. Suspendisse molestie felis ut semper blandit.  "</string>
    <string name="instructions_two">"Duis tellus urna, sodales vel turpis at, convallis porta sem. Sed lacinia, ante quis finibus pellentesque, tortor purus luctus purus, a interdum lacus ipsum sed diam. Ut vestibulum congue congue. Nam sit amet dolor ipsum. Integer lacinia est in porta egestas. Mauris ac leo ut ex ultricies suscipit. Curabitur gravida maximus ex, in tincidunt nulla luctus eget. Sed eget purus ante. Suspendisse vel eros risus. Nam in suscipit sem. Nam ac dolor lobortis, fringilla ex ac, elementum urna.  "</string>
    <string name="instructions_button">Start now!</string>
    <string name="welcome_button">To instructions</string>
</resources>
