<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_gradient">

        <ImageView
            android:id="@+id/instructions_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/fragment_vertical_margin"
            app:layout_constraintBottom_toTopOf="@+id/instructions_text_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:srcCompat="@drawable/isolated_with_shoes_store_vector_21210409"
            android:contentDescription="@string/shoe" />

        <TextView
            android:id="@+id/instructions_text_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fragment_vertical_margin"
            android:fontFamily="@font/audiowide"
            android:padding="@dimen/fragment_vertical_margin_large"
            android:text="@string/instructions_one"
            android:textColor="#000000"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/instructions_text_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_image" />

        <TextView
            android:id="@+id/instructions_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fragment_vertical_margin_large"
            android:layout_marginRight="@dimen/fragment_vertical_margin_large"
            android:fontFamily="@font/audiowide"
            android:padding="@dimen/fragment_vertical_margin_large"
            android:text="@string/instructions_two"
            android:textColor="#000000"
            android:textSize="26sp"
            app:layout_constraintBottom_toTopOf="@+id/instructions_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text_one" />

        <Button
            android:id="@+id/instructions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fragment_vertical_margin"
            android:background="@drawable/button"
            android:padding="12dp"
            android:text="@string/instructions_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructions_text_two" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>